Closed
Bug 1801344
Opened 3 years ago
Closed 3 years ago
Perma [tier 2] /builds/worker/checkouts/gecko/dom/workers/ScriptLoader.cpp:1267:19: error: loop variable 'requestHandle' creates a copy from type 'const RefPtr<mozilla::dom::ThreadSafeRequestHandle>' [-Werror=range-loop-construct]
Categories
(Core :: DOM: Workers, defect)
Core
DOM: Workers
Tracking
()
RESOLVED
FIXED
109 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox107 | --- | unaffected |
| firefox108 | --- | unaffected |
| firefox109 | + | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: yulia)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: mlaza [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=396995308&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/IiQnJfohQzWnmZSffB8KbA/runs/0/artifacts/public/logs/live_backing.log
[task 2022-11-18T16:09:14.129Z] 16:09:14 WARNING - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h:302:13: warning: 'void* memcpy(void*, const void*, size_t)' copying an object of non-trivial type 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} from an array of 'uint64_t' {aka 'long unsigned int'} [-Wclass-memaccess]
[task 2022-11-18T16:09:14.129Z] 16:09:14 INFO - 302 | memcpy(&value, &aInternalValue, sizeof(value));
[task 2022-11-18T16:09:14.130Z] 16:09:14 INFO - | ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-11-18T16:09:14.130Z] 16:09:14 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsIContentInlines.h:14,
[task 2022-11-18T16:09:14.131Z] 16:09:14 INFO - from /builds/worker/checkouts/gecko/dom/xslt/xpath/txXPathTreeWalker.h:11,
[task 2022-11-18T16:09:14.131Z] 16:09:14 INFO - from /builds/worker/checkouts/gecko/dom/xslt/xpath/XPathExpression.cpp:20,
[task 2022-11-18T16:09:14.132Z] 16:09:14 INFO - from Unified_cpp_dom_xslt_xpath0.cpp:11:
[task 2022-11-18T16:09:14.132Z] 16:09:14 INFO - /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:395:8: note: 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} declared here
[task 2022-11-18T16:09:14.132Z] 16:09:14 INFO - 395 | struct FrameBidiData {
[task 2022-11-18T16:09:14.132Z] 16:09:14 INFO - | ^~~~~~~~~~~~~
[task 2022-11-18T16:09:14.133Z] 16:09:14 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/xslt/xpath'
[task 2022-11-18T16:09:14.134Z] 16:09:14 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/xslt/xpath'
[task 2022-11-18T16:09:14.135Z] 16:09:14 INFO - dom/xslt/xpath/Unified_cpp_dom_xslt_xpath1.o
[task 2022-11-18T16:09:14.135Z] 16:09:14 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/xslt/xpath'
[task 2022-11-18T16:09:14.277Z] 16:09:14 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/workers'
[task 2022-11-18T16:09:14.277Z] 16:09:14 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_dom_workers0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/workers -I/builds/worker/workspace/obj-build/dom/workers -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/checkouts/gecko/dom/system -I/builds/worker/checkouts/gecko/dom/workers/remoteworkers -I/builds/worker/checkouts/gecko/js/xpconnect/loader -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/xpcom/build -I/builds/worker/checkouts/gecko/xpcom/threads -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wc++2a-compat -Wcomma-subscript -Wno-error=deprecated -Wno-error=deprecated-enum-enum-conversion -Wno-error=volatile -Wduplicated-cond -Wimplicit-fallthrough -Wlogical-op -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wformat -Wformat-overflow=2 -Wno-psabi -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_dom_workers0.o.pp Unified_cpp_dom_workers0.cpp
[task 2022-11-18T16:09:14.277Z] 16:09:14 INFO - In file included from Unified_cpp_dom_workers0.cpp:65:
[task 2022-11-18T16:09:14.277Z] 16:09:14 INFO - /builds/worker/checkouts/gecko/dom/workers/ScriptLoader.cpp: In member function 'virtual bool mozilla::dom::workerinternals::loader::ScriptExecutorRunnable::WorkerRun(JSContext*, mozilla::dom::WorkerPrivate*)':
[task 2022-11-18T16:09:14.278Z] 16:09:14 ERROR - /builds/worker/checkouts/gecko/dom/workers/ScriptLoader.cpp:1267:19: error: loop variable 'requestHandle' creates a copy from type 'const RefPtr<mozilla::dom::ThreadSafeRequestHandle>' [-Werror=range-loop-construct]
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - 1267 | for (const auto requestHandle : mLoadedRequests) {
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - | ^~~~~~~~~~~~~
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - /builds/worker/checkouts/gecko/dom/workers/ScriptLoader.cpp:1267:19: note: use reference type to prevent copying
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - 1267 | for (const auto requestHandle : mLoadedRequests) {
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - | ^~~~~~~~~~~~~
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - | &
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:53,
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/dom/PBrowserChild.h:49,
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/BrowserChild.h:11,
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - from /builds/worker/checkouts/gecko/dom/workers/WorkerLoadInfo.cpp:12,
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - from Unified_cpp_dom_workers0.cpp:137:
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h: In instantiation of 'static mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::ReinterpretHelper<T>::FromInternalValue(uint64_t) [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; uint64_t = long unsigned int]':
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h:202:51: required from 'mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::Get(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<mozilla::FrameBidiData> >*]'
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:4162:27: required from 'mozilla::FrameProperties::PropertyType<T> nsIFrame::GetProperty(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<mozilla::FrameBidiData> >*]'
[task 2022-11-18T16:09:14.278Z] 16:09:14 INFO - /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:1385:50: required from here
[task 2022-11-18T16:09:14.278Z] 16:09:14 WARNING - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h:302:13: warning: 'void* memcpy(void*, const void*, size_t)' copying an object of non-trivial type 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} from an array of 'uint64_t' {aka 'long unsigned int'} [-Wclass-memaccess]
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1800496
status-firefox107:
--- → unaffected
status-firefox108:
--- → unaffected
status-firefox109:
--- → affected
status-firefox-esr102:
--- → unaffected
Updated•3 years ago
|
tracking-firefox109:
--- → +
Updated•3 years ago
|
Severity: S4 → --
Priority: P5 → --
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•3 years ago
|
Assignee: nobody → ystartsev
Flags: needinfo?(ystartsev)
| Assignee | ||
Comment 4•3 years ago
|
||
Depends on D162557
Updated•3 years ago
|
Attachment #9304476 -
Attachment description: Bug 1801344 - fix iteration over threadSafeRequestHandler → Bug 1801344 - fix iteration over ThreadSafeRequestHandler; r=asuth
Pushed by ystartsev@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/54c43dad03b6
fix iteration over ThreadSafeRequestHandler; r=asuth
Comment 6•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•