Bug 1801344 - fix iteration over ThreadSafeRequestHandler; r=asuth

This fixes a build error. It was a bit tricker than I expected, comments are inline.

Differential Revision: https://phabricator.services.mozilla.com/D162578